--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "kubernetes>=32.0.1",
     "tabulate>=0.9.0",
     "rich>=13.0.0",
+    "watchdog>=2.3.1",
 ]
 
 [project.optional-dependencies]
